# fastapi_rest

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test.py
app/: crud.py  database.py  main.py  middleware.py  models.py  schemas.py
app/lib/: none_check.py
app/routes/: todo.py  user.py
