[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-rest"
version = "0.1.0"
description = "FastAPI REST API"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.128.8",
  "uvicorn==0.39.0",
  "sqlalchemy==2.0.51",
  "sqlmodel==0.0.34",
  "pydantic==2.13.4",
  "pydantic-settings==2.11.0",
  "python-dotenv==1.2.1",
  "psycopg2-binary==2.9.12",
  "sqlalchemy-cockroachdb==2.0.4"
]

[tool.vercel]
entrypoint = "app.main:app"

[tool.vercel.scripts]
build = "python build.py"